Fixed bug #34467 (foreach + __get + __set incosistency)